[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["belarminon <belarnicolau@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
databases = {extras = ["aiosqlite"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
